addded getAll pets endpoint and fixes
